--- a/Project_1/Seattle_Airbnb.ipynb
+++ b/Project_1/Seattle_Airbnb.ipynb
@@ -9,19 +9,19 @@
     "In this notebook I explored the Seattle AirBNB Data from Kaggle [dataset](https://www.kaggle.com/airbnb/seattle). I followed the [**CRISP-DM**](https://en.wikipedia.org/wiki/Cross-industry_standard_process_for_data_mining) process for this project. \n",
     "\n",
     "\n",
-    "For **Business Understanding**, I would like to better understand Seattle Airbnb rental price and the feature engagement of the price. In order to achieve this goal I asked three questions:\n",
+    "For **Business Understanding**, I would like to better understand the Seattle Airbnb rental price and the feature engagement of the price. In order to achieve this goal I asked three questions:\n",
     "\n",
-    "- Does Seattle Airbnb price depend on seasons and weekdays? \n",
+    "- Does Seattle Airbnb price depend on seasons or weekdays? \n",
     "- What are the most important features for the price? \n",
-    "- For those features what insight can be delivered so the price can be guided in future? \n",
+    "- For those features what insight can be delivered so the price can be guided in the future? \n",
     "\n",
-    "For **Data Understanding**, I collected three tables as the dataset. I focused on the first and second one. The first one **calendar.csv** lists price as a function of listing_id and date, with totally 1.4 million data points. The second table **listings.csv** is the major one I looked into. There are 92 fields and 3818 data points from the table, one is the price and I need to understand the relation between the 91 fields and the price. \n",
+    "For **Data Understanding**, I collected three tables from the dataset. I focused on the first and second ones. The first table **calendar.csv** lists price as a function of listing_id and date, with totally 1.4 million data points. The second table **listings.csv** is the major one I looked into. There are 91 fields plue one price column with 3818 data points from the table, I plan to understand the relation between the 91 fields and the price. \n",
     "\n",
-    "For **Data Preparation**, it is easy to use the calendar table to explore the price distribution, but feature engineering needs to be carried out for the listings table. I removed the categorical fields which has only one values or too many values (> 1500), and converted some categorical values to numbers such as weekly_price, monthly_price, cleaning_fee, security_deposit, etc. Then the categorical fields were encoded. There are many missing values, some of which were replaced by zero and others were replaced by the mean of the field, depending on which methods makes more sense. \n",
+    "For **Data Preparation**, it is straightforward to use the calendar table to explore the price distribution and study the seasonality variation. Feature engineering needs to be carried out for the listings table. I removed the categorical fields which has only one values or too many values (> 1500), and converted some categorical values to numbers such as weekly_price, monthly_price, cleaning_fee, security_deposit, etc. Then the categorical fields were encoded. There are many missing values, some of which were replaced by zero and others were replaced by the mean of the fields, depending on which methods make more sense. \n",
     "\n",
     "For **Data Modeling**, I built a price predictor based on the features in the listing table, deployed LightGBM and Random Forest to train the data so I could rank the importance of features related to price prediction.  \n",
     "\n",
-    "For **Evaluation**, I used R-square, MSE and MAE to estimate the model accuracy. Then I analyzed the most important features and deliver the insight. "
+    "For **Evaluation**, I used R-square, MSE and MAE to estimate the model accuracy. Then I analyzed the most important features and delivered the insight to guide customers to better understand the price."
    ]
   },
   {
@@ -1258,6 +1258,8 @@
     }
    ],
    "source": [
+    "# missing values are the same as available = \"f\" cases\n",
+    "\n",
     "df_calen.price.isnull().sum()"
    ]
   },
@@ -1267,6 +1269,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# select only \"t\"\n",
+    "\n",
     "df_calen = df_calen[df_calen.available == 't']"
    ]
   },
@@ -1298,6 +1302,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# convert price from strings to floats\n",
+    "\n",
     "df_calen['price'] = df_calen.price.apply(lambda x: float(x[1:].replace(',', '')))"
    ]
   },
@@ -1402,6 +1408,8 @@
     }
    ],
    "source": [
+    "# most of the data was from the yeaar 2016\n",
+    "\n",
     "pd.to_datetime(df_calen.date).dt.year.value_counts()"
    ]
   },
@@ -1434,7 +1442,7 @@
     }
    ],
    "source": [
-    "# See the relation of price and month\n",
+    "# See the relation of price and month, seasonal variation\n",
     "\n",
     "fig = plt.subplots(figsize=(10, 7))\n",
     "df_month = df_calen.groupby('month')['price'].mean().reset_index()\n",
